<?xml version="1.0"?>
<package>
  <name>ros_to_rsb_bridge</name>
  <version>0.0.1</version>
  <description>The ros_to_rsb_bridge package</description>

  <maintainer email="tkorthals@techfak.uni-bielefeld.de">Timo Korthals</maintainer>
  <maintainer email="drudolph@techfak.uni-bielefeld.de">Daniel Rudolph</maintainer>
  <maintainer email="jhomburg@techfak.uni-bielefeld.de">Jonas Homburg</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>amiro_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>amiro_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
